# CMake-SDL2-OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md  checks.json
libs/: CMakeLists.txt  fastgltf.cmake  glad.cmake  glm.cmake  imgui.cmake  meshoptimizer.cmake  mimalloc.cmake  parallelhashmap.cmake  sdl2.cmake
src/: CMakeLists.txt  Main.cpp
